# frappe_jawaly

./: README.md  pyproject.toml
frappe_jawaly/: hooks.py  modules.txt
frappe_jawaly/apis/: jawaly_api.py
frappe_jawaly/fixtures/: create_jawaly_template.json  jawaly_template_category.json  marketing_template_type.json
frappe_jawaly/frappe_jawaly/dashboard_chart/total_whatsapp_message_sent/: total_whatsapp_message_sent.json
frappe_jawaly/frappe_jawaly/doctype/create_jawaly_template/: create_jawaly_template.js  create_jawaly_template.json  create_jawaly_template.py  test_create_jawaly_template.py
frappe_jawaly/frappe_jawaly/doctype/create_jawaly_template_variable/: create_jawaly_template_variable.json  create_jawaly_template_variable.py
frappe_jawaly/frappe_jawaly/doctype/jawaly_message/: jawaly_message.js  jawaly_message.json  jawaly_message.py  test_jawaly_message.py
frappe_jawaly/frappe_jawaly/doctype/jawaly_message_variable/: jawaly_message_variable.json  jawaly_message_variable.py
frappe_jawaly/frappe_jawaly/doctype/jawaly_settings/: jawaly_settings.js  jawaly_settings.json  jawaly_settings.py  test_jawaly_settings.py
frappe_jawaly/frappe_jawaly/doctype/jawaly_template/: jawaly_template.js  jawaly_template.json  jawaly_template.py  test_jawaly_template.py
frappe_jawaly/frappe_jawaly/doctype/jawaly_template_category/: jawaly_template_category.js  jawaly_template_category.json  jawaly_template_category.py  test_jawaly_template_category.py
frappe_jawaly/public/js/: jawaly_whatsapp.js
(+14 files in other folders)
